name:                Grady
version:             0.0.0.1
synopsis:            Gradual Typing from a Categorical Prespective
-- description:         
homepage:            http://metatheorem.org/gradual-typing/
license:             BSD3
license-file:        LICENSE
author:              Harley Eades and Michael Townsend
maintainer:          heades@augusta.edu
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README
cabal-version:       >=1.10

executable grady
  main-is: Main.hs
  other-modules:
    CastInsertion,
    CatTools,
    Core.Eval,
    Core.Parser,
    Core.Pretty,
    Core.Repl,
    Core.Syntax,
    Core.TypeChecker,
    Names,
    PrettyType,
    Queue,
    Skeleton,
    Surface.Parser,
    Surface.Pretty,
    Surface.Repl,
    Surface.Syntax,
    Surface.TypeChecker,
    TypeErrors,
    TypeSyntax
  other-extensions:    LambdaCase, FlexibleContexts, TypeSynonymInstances
  build-depends:       base >=4.9 && <4.10,
                       containers >=0.5 && <0.6,
                       unbound >=0.5 && <0.6,
                       mtl >=2.2 && <2.3,
                       haskeline >=0.7 && <0.8,
                       filepath >=1.4 && <1.5,
                       text >=1.2 && <1.3,
                       parsec >=3.1 && <3.2,
                       parsec-extra >=0.2 && <0.3,
                       directory >=1.2 && <1.3
  hs-source-dirs:      Source
  default-language:    Haskell2010
